# logkit

./: .gitignore  Cargo.toml  HISTORY.md  LICENSE  README.md  TODO.md
.github/workflows/: linux.yml  macos.yml  windows.yml
benches/: benchmark.rs
examples/: custom_level.rs  custom_plugin.rs  hello_world.rs  multi_thread.rs
src/: consts.rs  define.rs  encode.rs  lib.rs  logger.rs  macros.rs  plugin.rs  record.rs  source.rs  target.rs  types.rs
