[package]
name = "logkit"
version = "0.3.1"
edition = "2021"
authors = ["Jian Chen <admin@chensoft.com>"]
license = "MIT"
description = "Super fast, structured, scalable logging library for Rust"
documentation = "https://docs.rs/logkit"
repository = "https://github.com/chensoft/logkit"
readme = "README.md"
keywords = ["logkit", "log", "logger", "logging"]

[features]
default = ["trace", "debug", "info", "warn", "error"]
trace = []
debug = []
info = []
warn = []
error = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
encoder = "0.2"
backtrace = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
